# kvasir-jni

./: .gitignore  CMakeLists.txt  clean-class.sh
java/: Main.java
java/jkvasir/: KvasirEngine.java
java/jkvasir/engine/: FrameManager.java  KvasirException.java
java/jkvasir/engine/rendering/: Buffer.java  Material.java  RenderBase.java  RenderException.java  Shader.java  Texture.java  TextureImage.java
java/jkvasir/math/: Mat2.java  Mat4.java  Quaternion.java  Vec2.java  Vec3.java  Vec4.java
java/jkvasir/world/: Camera3D.java  Mesh3D.java  Position2D.java  Position3D.java
native/: Mesh3D.cpp  RenderBase.cpp  Shader.cpp  jkvasir_engine_rendering_RenderBase.h  jkvasir_engine_rendering_Shader.h  jkvasir_world_Mesh3D.h  jni-aid.cpp  jni-aid.h  kvasir-include.h  kvasir-jni.cpp
native/Buffer/: Buffer.cpp  jkvasir_engine_rendering_Buffer.h
native/KvasirEngine/: KvasirEngine.cpp  jkvasir_KvasirEngine.h
native/Material/: Material.cpp  jkvasir_engine_rendering_Material.h
native/Mesh3D/: Mesh3D.cpp  jkvasir_world_Mesh3D.h
native/RenderBase/: RenderBase.cpp  jkvasir_engine_rendering_RenderBase.h
native/Shader/: Shader.cpp  jkvasir_engine_rendering_Shader.h
native/Texture/: Texture.cpp  jkvasir_engine_rendering_Texture.h
native/TextureImage/: TextureImage.cpp  jkvasir_engine_rendering_TextureImage.h
native/lib/: Bullet3Common.lib  Bullet3Geometry.lib  BulletInverseDynamics.lib  LinearMath.lib  glfw3.lib
